[package]
name = "derive-ex-tests"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-ex = { path = "../derive-ex" }

[dev-dependencies]
trybuild = "1.0.71"
ordered-float = "4.1.0"
