[package]
name = "derive-ex"
version = "0.1.4"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/derive-ex"
documentation = "https://docs.rs/derive-ex/"
keywords = ["derive"]
categories = ["rust-patterns"]
description = "Improved version of the macro to implement the traits defined in the standard library."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.103", features = [
    "full",
    "extra-traits",
    "visit",
    "visit-mut",
] }
quote = "1.0.21"
proc-macro2 = "1.0.47"
structmeta = "0.1.5"
